--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-size-watcher",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "author": "Pavel Klimashkin",
   "description": "Leverage ResizeObserver to add breakpoints to your component and track its size",
   "homepage": "https://github.com/klimashkin/react-size-watcher",
@@ -33,7 +33,7 @@
     "src"
   ],
   "peerDependencies": {
-    "react": "^16.10.2"
+    "react": "^16.10.2 || ^17.0.0"
   },
   "dependencies": {
     "prop-types": "^15.7.2"
