--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "src"
   ],
   "peerDependencies": {
-    "react": "^16.10.2 || ^17.0.0"
+    "react": "^16.10.2 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
     "prop-types": "^15.7.2"
